Simplify the design of the geocoder